--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <h3>
 <a name="via-web-browser" class="anchor" href="#via-web-browser"><span class="octicon octicon-link"></span></a>Via web browser:</h3>
 
-<pre><code>98.158.149.241  //URL Domain name TBD
+<pre><code>http://in2indie.herokuapp.com/ 
 </code></pre>
 
 <h3>
