added my server ip as secondary option

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <a name="via-web-browser" class="anchor" href="#via-web-browser"><span class="octicon octicon-link"></span></a>Via web browser:</h3>
 
 <pre><code>http://in2indie.herokuapp.com/ 
-</code></pre>
+</code><code>http:98.158.149.241/</code></pre>
 
 <h3>
 <a name="for-developers" class="anchor" href="#for-developers"><span class="octicon octicon-link"></span></a>For Developers:</h3>
