--- a/index.html
+++ b/index.html
@@ -1,87 +1,71 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
-
-    <title>In2indie by DJchopstix13</title>
-  </head>
-
-  <body>
-
-    <header>
-      <div class="container">
-        <h1>In2indie</h1>
-        <h2>A Web- Hosting Application exclusively for indie-genre products, which include, but are not limited to, movies, games, and music</h2>
-
-        <section id="downloads">
-          <a href="https://github.com/DJchopstix13/In2Indie/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/DJchopstix13/In2Indie/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/DJchopstix13/In2Indie" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
-
-    <div class="container">
-      <section id="main_content">
-        <h1>
-<a name="welcome-to-in2indie" class="anchor" href="#welcome-to-in2indie"><span class="octicon octicon-link"></span></a>Welcome to In2Indie</h1>
-
-<p>By: Jonathan Piatos</p>
-
-<p>In2Indie is a CMSI402: Senior Project Laboratory Project. </p>
-
-<h2>
-<a name="overview" class="anchor" href="#overview"><span class="octicon octicon-link"></span></a>Overview:</h2>
-
-<p>In2Indie is a web- application that hosts Indie- genre products that include (but are not limited to) video games, music, and movies. This application will serve as a way for these producers/ developers to not only advertise their product, but also reward them some money for any of their products sold on this application. The Indie producer/ developers can upload their product online to a remote server, which will be turned into a viewable product on In2Indie. Other users (the community) can view a certain product a limited amount of time on this application and download and purchase that product.</p>
-
-<h2>
-<a name="to-access-in2indie" class="anchor" href="#to-access-in2indie"><span class="octicon octicon-link"></span></a>To access In2Indie:</h2>
-
-<h3>
-<a name="via-web-browser" class="anchor" href="#via-web-browser"><span class="octicon octicon-link"></span></a>Via web browser:</h3>
-
-<pre><code>http://in2indie.herokuapp.com/ 
+    <head>
+        <meta charset='utf-8'>
+        <meta http-equiv="X-UA-Compatible" content="chrome=1">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+        <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+        <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+        <title>In2indie by DJchopstix13</title>
+    </head>
+    <body>
+        <header>
+            <div class="container">
+                <h1>In2indie</h1>
+                <h2>A Web- Hosting Application exclusively for indie-genre products, which include, but are not limited to, movies, games, and music</h2>
+                <section id="downloads">
+                    <a href="https://github.com/DJchopstix13/In2Indie/zipball/master" class="btn">Download as .zip</a>
+                    <a href="https://github.com/DJchopstix13/In2Indie/tarball/master" class="btn">Download as .tar.gz</a>
+                    <a href="https://github.com/DJchopstix13/In2Indie" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+                </section>
+            </div>
+        </header>
+        <div class="container">
+            <section id="main_content">
+                <h1>
+                    <a name="welcome-to-in2indie" class="anchor" href="#welcome-to-in2indie"><span class="octicon octicon-link"></span></a>Welcome to In2Indie
+                </h1>
+                <p>By: Jonathan Piatos</p>
+                <p>In2Indie is a CMSI402: Senior Project Laboratory Project. </p>
+                <h2>
+                    <a name="overview" class="anchor" href="#overview"><span class="octicon octicon-link"></span></a>Overview:
+                </h2>
+                <p>In2Indie is a web- application that hosts Indie- genre products that include (but are not limited to) video games, music, and movies. This application will serve as a way for these producers/ developers to not only advertise their product, but also reward them some money for any of their products sold on this application. The Indie producer/ developers can upload their product online to a remote server, which will be turned into a viewable product on In2Indie. Other users (the community) can view a certain product a limited amount of time on this application and download and purchase that product.</p>
+                <h2>
+                    <a name="to-access-in2indie" class="anchor" href="#to-access-in2indie"><span class="octicon octicon-link"></span></a>To access In2Indie:
+                </h2>
+                <h3>
+                    <a name="via-web-browser" class="anchor" href="#via-web-browser"><span class="octicon octicon-link"></span></a>Via web browser:
+                </h3>
+                <pre><code>http://in2indie.herokuapp.com/ 
 </code><code>http:98.158.149.241/ </code></pre>
-
-<h3>
-<a name="for-developers" class="anchor" href="#for-developers"><span class="octicon octicon-link"></span></a>For Developers:</h3>
-
-<p>I assume you have the following installed:
-    Node.js
-    NPM</p>
-
-<p>If not, please refer to <a href="https://github.com/joyent/node">NodeJS Github README</a> or <a href="https://gist.github.com/isaacs/579814">Isaac's Gist on installing node and NPM</a></p>
-
-<h4>
-<a name="to-install-and-run" class="anchor" href="#to-install-and-run"><span class="octicon octicon-link"></span></a>To Install and run:</h4>
-
-<pre><code>npm install    //installs the node modules 
+                <h3>
+                    <a name="for-developers" class="anchor" href="#for-developers"><span class="octicon octicon-link"></span></a>For Developers:
+                </h3>
+                <p>I assume you have the following installed:
+                    Node.js
+                    NPM
+                </p>
+                <p>If not, please refer to <a href="https://github.com/joyent/node">NodeJS Github README</a> or <a href="https://gist.github.com/isaacs/579814">Isaac's Gist on installing node and NPM</a></p>
+                <h4>
+                    <a name="to-install-and-run" class="anchor" href="#to-install-and-run"><span class="octicon octicon-link"></span></a>To Install and run:
+                </h4>
+                <pre><code>npm install    //installs the node modules 
 node app.js    //runs In2Indie's web application
 </code></pre>
-
-<h4>
-<a name="to-create-database-and-load-sample-data" class="anchor" href="#to-create-database-and-load-sample-data"><span class="octicon octicon-link"></span></a>To Create Database AND load sample data</h4>
-
-<p>*NOTE*I am assuming you have a PostgreSQL Database named <code>postgres</code> running on your machine.</p>
-
-<p>First, you must delete/create the PostgreSQL Database and then load sample data.  To do so, do the following:</p>
-
-<pre><code>bash delete-createdb.sh
+                <h4>
+                    <a name="to-create-database-and-load-sample-data" class="anchor" href="#to-create-database-and-load-sample-data"><span class="octicon octicon-link"></span></a>To Create Database AND load sample data
+                </h4>
+                <p>*NOTE*I am assuming you have a PostgreSQL Database named <code>postgres</code> running on your machine.</p>
+                <p>First, you must delete/create the PostgreSQL Database and then load sample data.  To do so, do the following:</p>
+                <pre><code>bash delete-createdb.sh
 bash load-sample-data.sh 
 </code></pre>
-
-<p>For more details, please refer to the <a href="https://github.com/DJchopstix13/in2indie/wiki">In2Indie Wiki</a></p>
-      </section>
-    </div>
-
-    
-  </body>
+                <p>For more details, please refer to the <a href="https://github.com/DJchopstix13/in2indie/wiki">In2Indie Wiki</a></p>
+            </section>
+        </div>
+    </body>
 </html>
