--- a/index.html
+++ b/index.html
@@ -40,14 +40,16 @@
                 <h3>
                     <a name="via-web-browser" class="anchor" href="#via-web-browser"><span class="octicon octicon-link"></span></a>Via web browser:
                 </h3>
-                <pre><code>http://in2indie.herokuapp.com/ 
-</code><code>http:98.158.149.241/ </code></pre>
+                <pre>
+                    <code>http://in2indie.herokuapp.com/</code>
+                    <code>http://98.158.149.241/</code>
+                </pre>
                 <h3>
                     <a name="for-developers" class="anchor" href="#for-developers"><span class="octicon octicon-link"></span></a>For Developers:
                 </h3>
                 <p>I assume you have the following installed:
-                    Node.js
-                    NPM
+                    <code>Node.js</code>
+                    <code>NPM</code>
                 </p>
                 <p>If not, please refer to <a href="https://github.com/joyent/node">NodeJS Github README</a> or <a href="https://gist.github.com/isaacs/579814">Isaac's Gist on installing node and NPM</a></p>
                 <h4>
