--- a/index.html
+++ b/index.html
@@ -48,11 +48,9 @@
                     <a name="for-developers" class="anchor" href="#for-developers"><span class="octicon octicon-link"></span></a>For Developers:
                 </h3>
                 <p>I assume you have the following installed:
-                    <pre>
-                        <code>Node.js
-                    NPM</code>
-                    </pre>
-                </p>
+                <pre><code>Node.js
+NPM</code></pre>
+                
                 <p>If not, please refer to <a href="https://github.com/joyent/node">NodeJS Github README</a> or <a href="https://gist.github.com/isaacs/579814">Isaac's Gist on installing node and NPM</a></p>
                 <h4>
                     <a name="to-install-and-run" class="anchor" href="#to-install-and-run"><span class="octicon octicon-link"></span></a>To Install and run:
