fixed URL to be Amazon's cloud service

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
                     <a name="via-web-browser" class="anchor" href="#via-web-browser"><span class="octicon octicon-link"></span></a>Via web browser:
                 </h3>
                 <pre>
-                    <code>http://in2indie.herokuapp.com/
-                    http://98.158.149.241/</code>
+                    <code>http://http://54.187.138.161/</code>
                 </pre>
                 <h3>
                     <a name="for-developers" class="anchor" href="#for-developers"><span class="octicon octicon-link"></span></a>For Developers:
@@ -58,14 +57,7 @@ NPM</code></pre>
                 <pre><code>npm install    //installs the node modules 
 node app.js    //runs In2Indie's web application
 </code></pre>
-                <h4>
-                    <a name="to-create-database-and-load-sample-data" class="anchor" href="#to-create-database-and-load-sample-data"><span class="octicon octicon-link"></span></a>To Create Database AND load sample data
-                </h4>
-                <p>*NOTE*I am assuming you have a PostgreSQL Database named <code>postgres</code> running on your machine.</p>
-                <p>First, you must delete/create the PostgreSQL Database and then load sample data.  To do so, do the following:</p>
-                <pre><code>bash delete-createdb.sh
-bash load-sample-data.sh 
-</code></pre>
+                
                 <p>For more details, please refer to the <a href="https://github.com/DJchopstix13/in2indie/wiki">In2Indie Wiki</a></p>
             </section>
         </div>
